# vulkan_test

./: .clang-tidy  CMakeLists.txt  README.md  build.sh  run.sh
shaders/: compile.sh  shader.vert
src/: main.cpp
